// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "account": Object {
          "S": "0xAccount",
        },
        "amount": Object {
          "N": "456",
        },
        "balance": Object {
          "N": "123",
        },
        "createdAt": Object {
          "N": "1111111111",
        },
        "currentSequence": Object {
          "N": "1",
        },
        "expiry": Object {
          "N": "1234567890",
        },
        "fee": Object {
          "N": "1",
        },
        "feeAsset": Object {
          "S": "feeAsset",
        },
        "fill": Object {
          "N": "234",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "matching": Object {
          "N": "111",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
        "price": Object {
          "N": "0.12345679",
        },
        "side": Object {
          "S": "bid",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.dev.liveOrders",
    },
  ],
]
`;

exports[`addRawOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "createdAt": Object {
          "N": "1234567890",
        },
        "exchangeAddress": Object {
          "S": "exchangeAddress",
        },
        "expirationTimeSeconds": Object {
          "S": "1234567890",
        },
        "feeRecipientAddress": Object {
          "S": "feeRecipientAddress",
        },
        "makerAddress": Object {
          "S": "makerAddress",
        },
        "makerAssetAmount": Object {
          "S": "123",
        },
        "makerAssetData": Object {
          "S": "makerAssetData",
        },
        "makerFee": Object {
          "S": "0",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
        "salt": Object {
          "S": "789",
        },
        "senderAddress": Object {
          "S": "senderAddress",
        },
        "signature": Object {
          "S": "signature",
        },
        "takerAddress": Object {
          "S": "takerAddress",
        },
        "takerAssetAmount": Object {
          "S": "456",
        },
        "takerAssetData": Object {
          "S": "takerAssetData",
        },
        "takerFee": Object {
          "S": "0",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.dev.rawOrders",
    },
  ],
]
`;

exports[`addTrade 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "makerAmount": Object {
          "N": "654",
        },
        "makerFee": Object {
          "N": "321",
        },
        "makerFeeAsset": Object {
          "S": "makerFeeAsset",
        },
        "makerOrderHash": Object {
          "S": "makerOrderHash",
        },
        "makerPrice": Object {
          "N": "987",
        },
        "pairDateHour": Object {
          "S": "code1|code2|1970-01-15-06",
        },
        "takerAddress": Object {
          "S": "takerAddress",
        },
        "takerAmount": Object {
          "N": "456",
        },
        "takerFee": Object {
          "N": "789",
        },
        "takerFeeAsset": Object {
          "S": "takerFeeAsset",
        },
        "takerOrderHash": Object {
          "S": "takerOrderHash",
        },
        "takerPrice": Object {
          "N": "123",
        },
        "takerSide": Object {
          "S": "takerSide",
        },
        "timestampTransactionHash": Object {
          "S": "1234567890|txHash",
        },
      },
      "TableName": "israfel.dev.trades",
    },
  ],
]
`;

exports[`addUserOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "accountYearMonth": Object {
          "S": "0xAccount|1970-01",
        },
        "amount": Object {
          "N": "456",
        },
        "balance": Object {
          "N": "123",
        },
        "createdAt": Object {
          "N": "1234560000",
        },
        "expiry": Object {
          "N": "1234567890",
        },
        "fee": Object {
          "N": "1",
        },
        "feeAsset": Object {
          "S": "feeAsset",
        },
        "fill": Object {
          "N": "234",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "matching": Object {
          "N": "111",
        },
        "pairOrderHashSequenceStatus": Object {
          "S": "code1|code2|0xOrderHash|2|status",
        },
        "price": Object {
          "N": "0.12345679",
        },
        "processed": Object {
          "BOOL": false,
        },
        "side": Object {
          "S": "side",
        },
        "type": Object {
          "S": "type",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "updatedBy": Object {
          "S": "updatedBy",
        },
      },
      "TableName": "israfel.dev.userOrders",
    },
  ],
]
`;

exports[`addUserOrder with txHash 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "accountYearMonth": Object {
          "S": "0xAccount|1970-01",
        },
        "amount": Object {
          "N": "456",
        },
        "balance": Object {
          "N": "123",
        },
        "createdAt": Object {
          "N": "1234560000",
        },
        "expiry": Object {
          "N": "1234567890",
        },
        "fee": Object {
          "N": "1",
        },
        "feeAsset": Object {
          "S": "feeAsset",
        },
        "fill": Object {
          "N": "234",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "matching": Object {
          "N": "111",
        },
        "pairOrderHashSequenceStatus": Object {
          "S": "code1|code2|0xOrderHash|2|status",
        },
        "price": Object {
          "N": "0.12345679",
        },
        "processed": Object {
          "BOOL": false,
        },
        "side": Object {
          "S": "side",
        },
        "transactionHash": Object {
          "S": "txHash",
        },
        "type": Object {
          "S": "type",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "updatedBy": Object {
          "S": "updatedBy",
        },
      },
      "TableName": "israfel.dev.userOrders",
    },
  ],
]
`;

exports[`deleteData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`deleteData error 1`] = `Object {}`;

exports[`deleteData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`deleteLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
      },
      "TableName": "israfel.dev.liveOrders",
    },
  ],
]
`;

exports[`deleteRawOrderSignature 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "TableName": "israfel.dev.rawOrders",
      "UpdateExpression": "SET updatedAt = :updatedAt REMOVE signature",
    },
  ],
]
`;

exports[`getLiveOrders 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":pair": Object {
          "S": "code1|code2",
        },
      },
      "KeyConditionExpression": "pair = :pair",
      "TableName": "israfel.dev.liveOrders",
    },
  ],
]
`;

exports[`getLiveOrders 2`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "matching": 111,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "orderHash",
        },
        ":pair": Object {
          "S": "code1|code2",
        },
      },
      "KeyConditionExpression": "pair = :pair AND orderHash = :orderHash",
      "TableName": "israfel.dev.liveOrders",
    },
  ],
]
`;

exports[`getLiveOrders with orderHash 2`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "matching": 111,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 3`] = `[Error: multiple record for order hash orderHash]`;

exports[`getRawOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "KeyConditionExpression": "orderHash = :orderHash",
      "TableName": "israfel.dev.rawOrders",
    },
  ],
]
`;

exports[`getRawOrder 2`] = `
Object {
  "createdAt": 1234567890,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
  "updatedAt": 1234567890,
}
`;

exports[`getRawOrder 3`] = `
Object {
  "createdAt": 1234567890,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
  "updatedAt": 1234567890,
}
`;

exports[`getRawOrder 4`] = `[Error: multiple record for order hash 0xOrderHash]`;

exports[`getTrades 1`] = `
Array [
  Array [
    "code1|code2",
    "1970-04-25-05",
  ],
  Array [
    "code1|code2",
    "1970-04-25-06",
  ],
  Array [
    "code1|code2",
    "1970-04-25-07",
  ],
]
`;

exports[`getTradesForHour 1`] = `
Array [
  Object {
    "maker": Object {
      "amount": 654,
      "fee": 321,
      "feeAsset": "makerFeeAsset",
      "orderHash": "makerOrderHash",
      "price": 987,
    },
    "pair": "code1|code2",
    "taker": Object {
      "address": "takerAddress",
      "amount": 456,
      "fee": 789,
      "feeAsset": "takerFeeAsset",
      "orderHash": "takerOrderHash",
      "price": 123,
      "side": "takerSide",
    },
    "timestamp": 1234567890,
    "transactionHash": "txHash",
  },
]
`;

exports[`getTradesForHour 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":pairDateHour": Object {
          "S": "code1|code2|1234-56-78-90",
        },
      },
      "KeyConditionExpression": "pairDateHour = :pairDateHour",
      "TableName": "israfel.dev.trades",
    },
  ],
]
`;

exports[`getUserOrders 1`] = `
Array [
  Array [
    "0xAccount",
    "1970-01",
    "",
  ],
  Array [
    "0xAccount",
    "1970-02",
    "",
  ],
  Array [
    "0xAccount",
    "1970-03",
    "",
  ],
  Array [
    "0xAccount",
    "1970-04",
    "",
  ],
]
`;

exports[`getUserOrdersForMonth 1`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 1,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "matching": 111,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "processed": true,
    "side": "side",
    "status": "status",
    "type": "type",
    "updatedAt": 1234567890,
    "updatedBy": "updatedBy",
  },
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 1,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "matching": 111,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "processed": true,
    "side": "side",
    "status": "status",
    "transactionHash": "txHash",
    "type": "type",
    "updatedAt": 1234567890,
    "updatedBy": "updatedBy",
  },
]
`;

exports[`getUserOrdersForMonth 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":accountYearMonth": Object {
          "S": "0xAccount|1234-56",
        },
        ":end": Object {
          "S": "code1|code2|z",
        },
        ":start": Object {
          "S": "code1|code2|",
        },
      },
      "KeyConditionExpression": "accountYearMonth = :accountYearMonth AND pairOrderHashSequenceStatus BETWEEN :start AND :end",
      "TableName": "israfel.dev.userOrders",
    },
  ],
]
`;

exports[`putData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`putData error 1`] = `Object {}`;

exports[`putData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`queryData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`queryData error 1`] = `Object {}`;

exports[`queryData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`scanData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`scanData error 1`] = `Object {}`;

exports[`scanData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`scanIpList 1`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.dev.ipList",
    },
  ],
]
`;

exports[`scanIpList 2`] = `
Object {
  "ip1": "white",
  "ip2": "black",
}
`;

exports[`scanStatus 1`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.dev.status",
    },
  ],
]
`;

exports[`scanStatus 2`] = `
Array [
  Object {
    "count": 123,
    "hostname": "hostname",
    "pair": "code1|code2",
    "tool": "tool",
    "updatedAt": 1234567890,
  },
  Object {
    "hostname": "hostname",
    "pair": "tool",
    "tool": "tool",
    "updatedAt": 1234567890,
  },
]
`;

exports[`scanTokens 1`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.dev.tokens",
    },
  ],
]
`;

exports[`scanTokens 2`] = `
Array [
  Object {
    "address": "addr1",
    "code": "code1",
    "custodian": "custodian1",
    "denomination": 1,
    "feeSchedules": Object {
      "WETH": Object {
        "minimum": 1,
        "rate": 0,
      },
    },
    "precisions": Object {
      "WETH": 0.000005,
    },
  },
  Object {
    "address": "addr2",
    "code": "code2",
    "custodian": "custodian2",
    "denomination": 10,
    "feeSchedules": Object {
      "WETH": Object {
        "asset": "asset",
        "minimum": 1,
        "rate": 0,
      },
    },
    "maturity": 1234567890,
    "precisions": Object {
      "WETH": 0.000005,
    },
  },
]
`;

exports[`updateData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`updateData error 1`] = `Object {}`;

exports[`updateData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`updateLiveOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":balance": Object {
          "N": "123",
        },
        ":currentSequence": Object {
          "N": "2",
        },
        ":fill": Object {
          "N": "234",
        },
        ":matching": Object {
          "N": "111",
        },
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
      },
      "TableName": "israfel.dev.liveOrders",
      "UpdateExpression": "SET balance = :balance, matching = :matching, fill = :fill, updatedAt = :updatedAt, currentSequence = :currentSequence ",
    },
  ],
]
`;

exports[`updateStatus 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.dev.status",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "count": Object {
          "N": "123",
        },
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.dev.status",
    },
  ],
]
`;
